# gwaei-stuff

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.am.orig  Makefile.am.rej  Makefile.in  Makefile.orig  NEWS  README  THANKS  aclocal.m4  autogen.sh  config.h  config.h.in  config.log.orig  config.status  config.status.orig  configure  configure-mingw32  configure.ac  libtool
po/: cs.po  (+23 more)
src/: Makefile  Makefile.am  Makefile.am.orig  Makefile.in  Makefile.orig  console-main-interface.c  dictinfo-object.c  dictionaries.c  dictlist-object.c  engine.c  formatting.c  gconf-preferences.c  gsettings-preferences.c  gtk-dict-install-line-object.c  gtk-dictionary-install-dialog.c  gtk-gconf-preferences.c  gtk-gsettings-preferences.c  gtk-kanjipad-interface-candidatearea.c  gtk-kanjipad-interface.c  gtk-main-callbacks.c  gtk-main-interface-sexy.c  gtk-main-interface-tabs.c  gtk-main-interface-unique.c  gtk-main-interface.c  gtk-printing.c  gtk-radicals-callbacks.c  gtk-radicals-interface.c  gtk-settings-callbacks.c  gtk-settings-dictionary-manager.c  gtk-settings-interface-install-line.c  gtk-settings-interface.c  gwaei  history.c  historylist-object.c  io.c  main-callbacks-gtk.c  main-callbacks-gtk.c.orig  main-interface-console.c  main-interface-gtk.c  main-interface-ncurses.c  (+23 more)
src/.deps/: callbacks.Po  engine.Po  gconf.Po  help-gtk.Po  help-none.Po  history.Po  io.Po  main-callbacks-gtk.Po  main-interface-gtk.Po  main-interface-none.Po  padarea.Po  preferences-none.Po  radicals-callbacks-gtk.Po  settings-callbacks-gtk.Po  settings-interface-gtk.Po  sexy-disable.Po
src/backend/: Makefile.am  backend.c  dictinfo-object.c  dictinfo.c  dictinfolist.c  dictinst.c  dictinstlist.c  dictlist-object.c  dictlist.c  engine.c  gsettings-preferences.c  historylist-object.c  historylist.c  io.c  preferences.c  queryline-object.c  queryline.c  regex.c  resultline.c  searchitem-object.c  searchitem.c  utilities.c
src/console/: Makefile.am  console.c  frontend.c  ncurses.c  waei.c
src/desktop/: Makefile  Makefile.in  Makefile.orig  gwaei.desktop
src/gtk/: Makefile.am  common.c  dictionaryinstall.c  dictionarymanager.c  frontend.c  gwaei  gwaei.c  installprogress.c  kanjipad-callbacks.c  kanjipad-candidatearea.c  kanjipad-drawingarea.c  kanjipad.c  libsexy.c  libunique.c  main-callbacks.c  main-libsexy.c  main-tabs.c  main.c  output-callbacks.c  preferences.c  printing.c  radicals-callbacks.c  radicals.c  radsearchtool-callbacks.c  radsearchtool.c  settings-callbacks.c  settings-dictionary-install-dialog.c  settings-dictionary-manager.c  settings-listeners.c  settings.c  spellcheck.c
src/gtk-builder-xml/: Makefile.am  install.ui  kanjipad.ui  main.glade  main.ui  radicals.glade  radicals.ui  settings.glade  settings.ui
src/gtk/.deps/: gwaei-common.Po  gwaei-frontend.Po  gwaei-gsettings-preferences.Po  gwaei-gwaei.Po  gwaei-kanjipad-callbacks.Po  gwaei-kanjipad-candidatearea.Po  gwaei-kanjipad-drawingarea.Po  gwaei-kanjipad-interface-candidatearea.Po  gwaei-kanjipad-interface-drawingarea.Po  gwaei-kanjipad-interface.Po  gwaei-kanjipad.Po  gwaei-main-callbacks.Po  gwaei-main-interface-sexy.Po  gwaei-main-interface-tabs.Po  gwaei-main-interface-unique.Po  gwaei-main-interface.Po  gwaei-main-libsexy.Po  gwaei-main-libunique.Po  gwaei-main-sexy.Po  gwaei-main-tabs.Po  gwaei-main-unique.Po  gwaei-main.Po  gwaei-preferences.Po  gwaei-printing.Po  gwaei-radicals-callbacks.Po  gwaei-radicals-interface.Po  gwaei-radicals.Po  gwaei-settings-callbacks.Po  gwaei-settings-dictionary-install-dialog.Po  gwaei-settings-dictionary-manager.Po  gwaei-settings-interface.Po  gwaei-settings.Po
src/gtk/.libs/: gwaei
src/gtk/desktop/: Makefile.am  gwaei.desktop.in  (+1 more)
src/gwaei/: Makefile.am  addbutton.c  addvocabularywindow-callbacks.c  addvocabularywindow.c  addvocabularywindow.ui  application-callbacks.c  application-private.c  application.c  common.c  dictinfolist-callbacks.c  dictinfolist.c  dictionaryinstall-callbacks.c  dictionaryinstall-private.c  dictionaryinstall-window.c  dictionaryinstall.c  dictionaryinstallwindow-callbacks.c  dictionaryinstallwindow-private.c  dictionaryinstallwindow.c  dictionarymanager-callbacks.c  dictionarymanager.c  flashcardwindow.ui  frontend.c  gwaei-valgrind.sh  gwaei.c  installprogress-callbacks.c  installprogress-window.c  installprogress.c  installprogresswindow-callbacks.c  installprogresswindow.c  installprogresswindow.ui  kanjipad-callbacks.c  kanjipad-candidatearea.c  kanjipad-drawingarea.c  kanjipad-private.c  kanjipad-window.c  kanjipad.c  kanjipadwindow-callbacks.c  kanjipadwindow-private.c  kanjipadwindow.c  libunique.c  (+45 more)
src/images/: Makefile.am
src/img/: Makefile  Makefile.am  Makefile.in  Makefile.orig
src/kanjipad/: README  callbacks.c  callbacks.h  edit_glade_file  kanjipad.c  kanjipad.glade  kanjipad.h  kanjipad.ui
src/kpengine/: Makefile  Makefile.am  Makefile.in  Makefile.orig  kpengine
src/libwaei/: Makefile.am  dictinfo.c  dictinfolist.c  dictinst.c  dictinstlist.c  engine-data.c  engine.c  history.c  historylist.c  io.c  libwaei.c  morphology.c  preferences.c  prefmanager-callbacks.c  prefmanager.c  queryline.c  regex.c  resultline.c  searchitem.c  utilities.c  vocabularyitem.c  vocabularylist.c
src/schemas/: Makefile  Makefile.am  Makefile.in  Makefile.orig  gwaei.schemas  gwaei.schemas.in  org.gnome.gwaei.dictionary.gschema.xml.in  org.gnome.gwaei.fonts.gschema.xml.in  org.gnome.gwaei.gschema.xml  org.gnome.gwaei.gschema.xml.in  org.gnome.gwaei.highlight.gschema.xml.in  org.gnome.gwaei.kanjipad_window.gschema.xml.in  org.gnome.gwaei.main_window.gschema.xml.in  org.gnome.gwaei.radicals_window.gschema.xml.in
src/waei/: Makefile.am  application.c  console-callbacks.c  console-output.c  console.c  frontend.c  ncurses-callbacks.c  ncurses.c  search-data.c  waei-valgrind.sh  waei.c
src/xml/: Makefile  Makefile.am  Makefile.in  Makefile.orig  main.glade  main.glade.backup  main.glade.orig  main.ui  main.xml  main.xml.orig  radicals.glade  radicals.ui  radicals.xml  settings.glade  settings.ui  settings.xml
(+672 files in other folders)
