## Process this file with automake to produce Makefile.in


gsettings_SCHEMAS = org.gnome.gwaei.gschema.xml org.gnome.gwaei.highlight.gschema.xml org.gnome.gwaei.dictionary.gschema.xml org.gnome.gwaei.kanjipad_window.gschema.xml org.gnome.gwaei.main_window.gschema.xml org.gnome.gwaei.fonts.gschema.xml org.gnome.gwaei.radicals_window.gschema.xml
@GSETTINGS_RULES@


EXTRA_DIST = org.gnome.@PACKAGE@.gschema.xml.in
