## Process this file with automake to produce Makefile.in

PACKAGE = @PACKAGE@
VERSION = @VERSION@

pkgdata_DATA = main.xml radicals.xml settings.xml ../kanjipad/kanjipad.xml

EXTRA_DIST = main.glade radicals.glade settings.glade main.xml radicals.xml settings.xml ../kanjipad/kanjipad.xml ../kanjipad/kanjipad.glade edit_glade_file

