noinst_HEADERS = common.h window.h dictionaryinstall-callbacks.h dictionaryinstall-window.h dictionarymanager.h gwaei.h installprogress-callbacks.h installprogress-window.h kanjipad-callbacks.h kanjipad-candidatearea.h kanjipad-drawingarea.h kanjipad-window.h libunique.h output-callbacks.h pluginmanager.h printing.h radicals-callbacks.h radicals-window.h search-callbacks.h search-window.h settings-callbacks.h settings-listeners.h settings-window.h spellcheck.h
