noinst_HEADERS = window.h dictionaryinstall-callbacks.h dictionaryinstall-window.h dictinfolist.h dictinfolist-callbacks.h gwaei.h installprogress-callbacks.h installprogress-window.h kanjipad-callbacks.h kanjipad-candidatearea.h kanjipad-drawingarea.h kanjipad-window.h output-callbacks.h pluginmanager.h printing.h radicals-callbacks.h radicals-window.h search-callbacks.h search-window.h search-data.h settings-callbacks.h settings-window.h spellcheck.h spellcheck-callbacks.h
