noinst_HEADERS = window.h dictionaryinstallwindow-callbacks.h dictionaryinstallwindow.h dictinfolist.h dictinfolist-callbacks.h gwaei.h installprogresswindow-callbacks.h installprogresswindow.h kanjipadwindow-callbacks.h kanjipad-candidatearea.h kanjipad-drawingarea.h kanjipadwindow.h searchwindow-output.h pluginmanager.h printing.h radicalswindow-callbacks.h radicalswindow.h searchwindow-callbacks.h searchwindow.h search-data.h settingswindow-callbacks.h settingswindow.h spellcheck.h spellcheck-callbacks.h gettext.h
