libraryincludedir = $(includedir)/libwaei
libraryinclude_HEADERS = dict.h dictinfo.h dictinfolist.h dictinst.h dictinstlist.h engine-data.h engine.h history.h io.h libwaei.h preferences.h queryline.h regex.h resultline.h searchitem.h utilities.h vocabularyitem.h vocabularylist.h
noinst_HEADERS = gettext.h

